page horizontal scroll fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -2419,7 +2419,7 @@ a.b-callback_footer:hover{
 .b-modal__btn_close{
     position: absolute;
     top: 0;
-    right: -38px;
+    right: 0;
     text-align: center;
     width: 38px;
     height: 38px;
